--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,66 @@
+@font-face {
+ font-family: "Lato";
+ src: url("../fonts/Lato-Regular.woff2") format("woff2"), url("../fonts/Lato-Regular.woff") format("woff");
+ font-style: normal;
+ font-weight: 400; 
+}
+
+@font-face {
+  font-family: "Lato";
+  src: url("../fonts/Lato-Light.woff2") format("woff2"), url("../fonts/Lato-Light.woff") format("woff");
+  font-style: normal;
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: "Lato";
+  src: url("../fonts/Lato-Italic.woff2") format("woff2"), url("../fonts/Lato-Italic.woff") format("woff");
+  font-style: italic;
+  font-weight: 400; 
+ }
+ 
+ @font-face {
+   font-family: "Lato";
+   src: url("../fonts/Lato-LightItalic.woff2") format("woff2"), url("../fonts/Lato-LightItalic.woff") format("woff");
+   font-style: italic;
+   font-weight: 300;
+ }
+
+ @font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat-Regular.woff2") format("woff2"), url("../fonts/Montserrat-Regular.woff") format("woff");
+  font-style: normal;
+  font-weight: 400; 
+ }
+
+ @font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat-Bold.woff2") format("woff2"), url("../fonts/Montserrat-Bold.woff") format("woff");
+  font-style: bold;
+  font-weight: 700; 
+ }
+
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden,
+label.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+ *, ::after, ::before {
+   box-sizing: border-box;
+ }
+
 body {
   min-width: 1024px;
   margin: 0;
@@ -6,10 +69,224 @@ body {
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
-  color: rgb(67, 67, 67);
+  color: #434343;
+  background: #DAE3E7;
+}
+
+/* зачем мы ставим это свойство? */
+img {
+  max-width: 100%;
+  height: auto;
 }
 
 a {
   text-decoration: none;
 }
 
+.container {
+  width: 1024px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.section-inner {
+  padding: 30px;
+  background-color: #ffffff;
+  margin-bottom: 30px;
+}
+
+.section-title {
+  margin: 0;
+  margin-bottom: 30px;
+  font-family: "Montserrat", Arial, sans-serif;
+  font-size: 24px;
+  line-height: 1.2;
+  color: #545e59;
+  text-transform: capitalize;
+}
+
+.page-header {
+  background-color: #f5f5f5;
+  padding: 30px 0;
+  border-top: 10px solid #778492;
+  margin-bottom: 60px;
+}
+
+.page-header .container {
+  display: flex;
+  align-items: flex-start;
+}
+
+.page-header__photo {
+  width: 180px;
+  border-radius: 50%;
+  margin-right: 30px;
+}
+
+.page-header__name {
+  font-family: "Montserrat", Arial, sans-serif;
+  font-size: 38px;
+  font-weight: 700;
+  line-height: 1.2;
+  color: #49515a;
+  margin: 30px 0 5px;
+}
+
+.page-header__profession {
+  font-size: 24px;
+  line-height: 1.2;
+  color: #778492;
+  font-weight: 400;
+  margin: 0;
+  margin-bottom: 15px;
+  display: block;
+}
+
+.page-header__contact-button {
+  margin: 0;
+  padding: 0;
+  margin-left: auto;
+  margin-top: 60px;
+  padding: 9px 16px 9px 45px;
+  font-family: "Montserrat", Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  font-weight: 700;
+  color: #ffffff;
+  background-color: #54ba4e;
+  text-transform: uppercase;
+  border-radius: 5px;
+  position: relative;
+}
+
+.page-header__contact-button:hover {
+  background-color: #49ac43;
+}
+
+.page-header__contact-button::before {
+  content: "";
+  width: 16px;
+  height: 16px;
+  background-image: url("../img/mail-icon.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  position: absolute;
+  top: 10px;
+  left: 20px;
+}
+
+.page-header__contact-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+}
+
+.page-header__contact {
+  margin-right: 10px;
+}
+
+.page-header__contact-link {
+  display: block;
+  width: 36px;
+  height: 36px;
+  background-color: #b0b7bf;
+  border-radius: 50%;
+  position: relative;
+}
+
+.page-header__contact-link--github::before {
+  content: "";
+  width: 20px;
+  height: 20px;
+  background-image: url("../img/icon-github.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  position: absolute;
+  top: 8px;
+  left: 9px;
+}
+
+.page-header__contact-link--skype::before {
+  content: "";
+  width: 24px;
+  height: 24px;
+  background-image: url("../img/icon-skype.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  position: absolute;
+  top: 6px;
+  left: 6px;
+}
+
+.skills__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.skills__item {
+  margin-bottom: 30px;
+}
+
+.skills__name {
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.skills__level-bar {
+  width: 100%;
+  height: 15px;
+  background-color: #e8e8e8;
+}
+
+.skills__level-bar-inner {
+  background-color: #66cb8c;
+  height: 15px;
+}
+
+.skills__level-bar-inner--html {
+  width: 75%;
+}
+
+.skills__level-bar-inner--css {
+  width: 60%;
+}
+
+.skills__level-bar-inner--bem {
+  width: 70%;
+}
+
+.skills__level-bar-inner--less {
+  width: 35%;
+}
+
+.skills__level-bar-inner--gulp {
+  width: 25%;
+}
+
+.skills__level-bar-inner--js {
+  width: 35%;
+}
+
+.skills__level-bar-inner--git {
+  width: 50%;
+}
+
+.page-footer {
+  margin-top: 60px;
+  background-color: #32383e;
+}
+
+.page-footer__developer {
+  margin: 0;
+  padding: 10px 0;
+  color: #a1aab4;
+  font-size: 14px;
+  line-height: 1.6;
+  text-align: center;
+}
+
+.page-footer__link {
+  color: #ffffff;
+}
