--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
  font-family: "Lato";
  src: url("../fonts/Lato-Regular.woff2") format("woff2"), url("../fonts/Lato-Regular.woff") format("woff");
  font-style: normal;
- font-weight: 400; 
+ font-weight: 400;
 }
 
 @font-face {
@@ -16,9 +16,9 @@
   font-family: "Lato";
   src: url("../fonts/Lato-Italic.woff2") format("woff2"), url("../fonts/Lato-Italic.woff") format("woff");
   font-style: italic;
-  font-weight: 400; 
+  font-weight: 400;
  }
- 
+
  @font-face {
    font-family: "Lato";
    src: url("../fonts/Lato-LightItalic.woff2") format("woff2"), url("../fonts/Lato-LightItalic.woff") format("woff");
@@ -30,14 +30,14 @@
   font-family: "Montserrat";
   src: url("../fonts/Montserrat-Regular.woff2") format("woff2"), url("../fonts/Montserrat-Regular.woff") format("woff");
   font-style: normal;
-  font-weight: 400; 
+  font-weight: 400;
  }
 
  @font-face {
   font-family: "Montserrat";
   src: url("../fonts/Montserrat-Bold.woff2") format("woff2"), url("../fonts/Montserrat-Bold.woff") format("woff");
   font-style: bold;
-  font-weight: 700; 
+  font-weight: 700;
  }
 
 .visually-hidden:not(:focus):not(:active),
@@ -70,7 +70,7 @@ body {
   line-height: 24px;
   font-weight: 400;
   color: #434343;
-  background: #DAE3E7;
+  background: #dae3e7;
 }
 
 /* зачем мы ставим это свойство? */
